--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,52 @@
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap");
+body {
+  background-color: #333;
+  color: #eee;
+  font-family: "PT Sans Narrow";
+  text-align: center;
+}
+
+#loading.error {
+  background-color: #eee;
+  color: red;
+}
+
 #spread {
-  width: 100%;
   max-width: 800px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+  gap: 5px;
+  margin: auto;
 }
 #spread > div {
-  border: 1px solid #000;
+  background-color: #222;
+  border: 1px solid #aaa;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+  padding: 15px 8px;
+}
+#spread > div > * {
+  margin: 0;
 }
 #spread > div.timeframe {
-  width: 33.33333%;
+  flex: 1;
+}
+#spread > div.timeframe img {
+  height: 200px;
+}
+#spread > div.timeframe img.reversed {
+  transform: rotate(180deg);
 }
 #spread > div#advice {
   width: 100%;
+}
+
+@media only screen and (max-width: 700px) {
+  #spread > div.timeframe {
+    flex: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
