--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,6 @@ body {
   text-align: center;
 }
 
-#loading.error {
-  background-color: #eee;
-  color: red;
-}
-
 #spread {
   max-width: 800px;
   width: 100%;
@@ -18,6 +13,12 @@ body {
   flex-wrap: wrap;
   gap: 5px;
   margin: auto;
+}
+#spread.error {
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #eee;
+  color: red;
 }
 #spread > div {
   background-color: #222;
