--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,17 +2,25 @@
 body {
   background-color: #333;
   color: #eee;
-  font-family: "PT Sans Narrow";
   margin: 10px;
   text-align: center;
 }
+body,
+body button,
+body textarea {
+  font-family: "PT Sans Narrow";
+  font-size: 16px;
+}
 
 button,
-input {
+textarea {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
   border: 0;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: #111;
   font-weight: normal;
 }
 
@@ -28,17 +36,26 @@ button#new-reading {
   margin-bottom: 20px;
 }
 
-input {
+button#new-reading,
+#custom-textarea button {
+  height: 30px;
+  min-width: 90px;
+  font-weight: bold;
+}
+
+textarea {
+  height: 80px;
+  width: 100%;
   background-color: #eee;
 }
 
-#custom-input {
-  height: 20px;
-  display: inline-flex;
-  gap: 5px;
-}
-#custom-input button {
-  width: 45px;
+#custom-textarea {
+  height: -moz-fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
 form#custom {
@@ -61,7 +78,6 @@ form#custom {
 #questions form button {
   width: 100%;
   align-items: center;
-  box-sizing: border-box;
   gap: 5px;
   font-style: italic;
   padding: 5px;
