--- a/delfai-react/src/css/style.scss
+++ b/delfai-react/src/css/style.scss
@@ -12,6 +12,7 @@ body {
 
     &,
     button,
+    input,
     textarea {
         color: #111;
         font-family: "PT Sans Narrow", Helvetica, Arial, sans-serif;
@@ -21,12 +22,14 @@ body {
     }
 
     button,
+    input,
     textarea {
         appearance: none;
         border: 0;
         border-radius: 0;
     }
 
+    input,
     textarea {
         background-color: #eee;
     }
@@ -37,17 +40,48 @@ body {
     flex-direction: column;
 }
 
-#custom button,
-.next-button {
+#sign-in {
+    height: 100%;
+    width: 100%;
+    color: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+
+    form {
+        table {
+            margin: auto;
+
+            tr {
+                td {
+                    &:first-child {
+                        text-align: right;
+                    }
+
+                    button {
+                        margin-left: auto;
+                    }
+                }
+            }
+        }
+    }
+
+    #sign-in-error {
+        color: red;
+    }
+}
+
+.standard-btn {
     height: 35px;
-    width: 90px;
+    min-width: 90px;
     font-weight: bold;
 }
 
+.standard-btn,
 nav li,
-#questions button,
-.next-button,
-#custom button {
+#questions button {
     background-color: #999;
     display: flex;
     align-items: center;
