--- a/delfai-react/src/css/style.scss
+++ b/delfai-react/src/css/style.scss
@@ -196,6 +196,10 @@ main {
 
             .card-image {
                 height: 200px;
+
+                &.reversed {
+                    transform: rotate(180deg);
+                }
             }
         }
     }
