--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -140,7 +140,9 @@ main {
         &#home {
             #user-options {
                 display: flex;
+                flex-wrap: wrap;
                 gap: 10px;
+                justify-content: center;
             }
 
             #custom {
