--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -182,6 +182,17 @@ main {
                 border-bottom: 2px solid #333;
                 margin-bottom: 12.5px;
 
+                &:first-child {
+                    input {
+                        height: 19.2px;
+                        padding: 0;
+
+                        &:focus {
+                            outline: none;
+                        }
+                    }
+                }
+
                 input {
                     width: 100%;
                     color: #eee;
