--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -35,6 +35,31 @@ body {
     }
 }
 
+.compare {
+    max-width: 320px;
+    width: 100%;
+    display: inline-flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 10px;
+
+    h3 {
+        margin: 0;
+    }
+
+    td {
+        background-color: #444;
+        padding: 2px 5px;
+
+        &.unlike-row {
+            background-color: #333;
+            font-size: 0.85rem;
+            font-style: italic;
+            font-weight: 100;
+        }
+    }
+}
+
 #root {
     display: flex;
     flex-direction: column;
@@ -234,5 +259,19 @@ main {
                 }
             }
         }
+    }
+}
+
+ul.words-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    list-style-type: none;
+    padding: 0;
+
+    li {
+        border: 1px solid #444;
+        border-radius: 8px;
+        padding: 5px 10px;
     }
 }
