--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -38,7 +38,9 @@ body {
 
 .compare {
     max-width: 320px;
+    min-width: 160px;
     width: 100%;
+    box-sizing: border-box;
     display: inline-flex;
     flex-direction: column;
     gap: 15px;
