--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,9 +1,63 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap");
 
+@font-face {
+    font-family: "Norse Bold";
+    src: url("./fonts/Norsebold.otf") format("opentype");
+    font-weight: bold;
+    font-style: normal;
+}
+
+h1,
+h2 {
+    font-family: "Norse Bold", "Times New Roman", Times, serif;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
 body,
 html,
 #root {
     height: 100%;
+}
+
+a,
+.link-btn {
+    background-color: transparent;
+    color: skyblue;
+    text-decoration: underline;
+    padding: 0;
+
+    &:hover {
+        color: #fff;
+        cursor: pointer;
+    }
+}
+
+#alternative-page {
+    max-width: 800px;
+    width: 100%;
+    box-sizing: border-box;
+    color: #eee;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: auto;
+    padding: 40px 15px;
+    text-align: center;
+
+    &.settings {
+        gap: 20px;
+
+        h1 {
+            margin: 0;
+        }
+
+        button {
+            width: 110px;
+        }
+    }
 }
 
 body {
@@ -34,6 +88,10 @@ body {
     textarea {
         background-color: #eee;
     }
+
+    button {
+        text-align: center;
+    }
 }
 
 .compare {
@@ -61,6 +119,13 @@ body {
             font-weight: 100;
         }
     }
+}
+
+img.separator {
+    height: auto;
+    width: 150px;
+    margin: auto;
+    padding: 40px 0;
 }
 
 #root {
@@ -97,6 +162,12 @@ body {
     }
 }
 
+summary.standard-btn {
+    width: 150px;
+    color: #111;
+    margin: auto;
+}
+
 .standard-btn {
     height: 35px;
     min-width: 90px;
@@ -104,8 +175,7 @@ body {
 }
 
 .standard-btn,
-nav li,
-#questions button {
+nav li {
     background-color: #999;
     display: flex;
     align-items: center;
@@ -186,12 +256,27 @@ main {
                     width: 100%;
                 }
 
+                h2 {
+                    margin-top: 0;
+                }
+
                 button {
+                    background-color: rgba(100, 100, 100, 0.2);
                     box-sizing: border-box;
+                    color: #eee;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     flex-direction: column;
                     font-size: inherit;
                     font-style: italic;
                     padding: 10px;
+
+                    &:hover {
+                        background-color: #111;
+                        color: #eee;
+                        cursor: pointer;
+                    }
 
                     h3 {
                         font-style: initial;
@@ -282,11 +367,9 @@ main {
 }
 
 details {
-    &:hover {
-        cursor: pointer;
-
+    &[open] {
         summary {
-            font-weight: bold;
+            display: none;
         }
     }
 }
