--- a/src/css/custom-spread.css
+++ b/src/css/custom-spread.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("../css/colors.css");
 #custom-spread {
   display: flex;
   flex-direction: column;
@@ -14,39 +15,40 @@
   justify-content: center;
   gap: 10px;
 }
-#custom-spread form .custom-card-select input,
-#custom-spread form .custom-card-select select {
-  background-color: #eee;
+#custom-spread input,
+#custom-spread select {
+  background-color: var(--text-color);
   box-sizing: border-box;
   margin: 0;
 }
-#custom-spread form .custom-card-select label:hover,
-#custom-spread form .custom-card-select select:hover {
+#custom-spread label:hover,
+#custom-spread select:hover {
   cursor: pointer;
 }
-#custom-spread form .custom-card-select label {
+#custom-spread label {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 5px;
   line-height: 0;
 }
-#custom-spread form .custom-card-select label input[type=checkbox] {
+#custom-spread label input[type=checkbox] {
   height: 15px;
   width: 15px;
   border-radius: 5px;
 }
-#custom-spread form .custom-card-select label input[type=checkbox]:checked {
-  background-color: #aaa;
+#custom-spread label input[type=checkbox]:checked {
+  background-color: var(--accent-color);
   display: flex;
   align-items: center;
   justify-content: center;
 }
-#custom-spread form .custom-card-select label input[type=checkbox]:checked::before {
+#custom-spread label input[type=checkbox]:checked::before {
   content: "✓";
   font-weight: bold;
   font-size: 15px;
 }
-#custom-spread form .custom-card-select select {
+#custom-spread select {
   height: 25px;
   padding-left: 5px;
 }/*# sourceMappingURL=custom-spread.css.map */
