--- a/src/css/custom-spread.scss
+++ b/src/css/custom-spread.scss
@@ -1,3 +1,5 @@
+@import url("../css/colors.css");
+
 #custom-spread {
     display: flex;
     flex-direction: column;
@@ -13,52 +15,51 @@
             justify-content: center;
             gap: 10px;
         }
+    }
 
-        .custom-card-select {
-            input,
-            select {
-                background-color: #eee;
-                box-sizing: border-box;
-                margin: 0;
-            }
+    input,
+    select {
+        background-color: var(--text-color);
+        box-sizing: border-box;
+        margin: 0;
+    }
 
-            label,
-            select {
-                &:hover {
-                    cursor: pointer;
-                }
-            }
+    label,
+    select {
+        &:hover {
+            cursor: pointer;
+        }
+    }
 
-            label {
+    label {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        line-height: 0;
+
+        input[type="checkbox"] {
+            height: 15px;
+            width: 15px;
+            border-radius: 5px;
+
+            &:checked {
+                background-color: var(--accent-color);
                 display: flex;
                 align-items: center;
-                gap: 5px;
-                line-height: 0;
+                justify-content: center;
 
-                input[type="checkbox"] {
-                    height: 15px;
-                    width: 15px;
-                    border-radius: 5px;
-
-                    &:checked {
-                        background-color: #aaa;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-
-                        &::before {
-                            content: "✓";
-                            font-weight: bold;
-                            font-size: 15px;
-                        }
-                    }
+                &::before {
+                    content: "✓";
+                    font-weight: bold;
+                    font-size: 15px;
                 }
             }
-
-            select {
-                height: 25px;
-                padding-left: 5px;
-            }
         }
+    }
+
+    select {
+        height: 25px;
+        padding-left: 5px;
     }
 }
