--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,43 +1,98 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap");
+@import url("./colors.css");
 @font-face {
   font-family: "Norse Bold";
   src: url("./fonts/Norsebold.otf") format("opentype");
   font-weight: bold;
   font-style: normal;
 }
-h1,
-h2 {
-  font-family: "Norse Bold", "Times New Roman", Times, serif;
-}
-
-h1 {
-  font-size: 3rem;
-}
-
 body,
 html,
 #root {
   height: 100%;
 }
 
-a,
-.link-btn {
+body {
+  background-color: var(--bg-color);
+  margin: 0;
+}
+body #root {
+  display: flex;
+  flex-direction: column;
+}
+body,
+body button,
+body input,
+body select,
+body textarea {
+  color: var(--bg-color);
+  font-family: "PT Sans Narrow", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1.4rem;
+}
+body button,
+body input,
+body textarea {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 0;
+  border-radius: 0;
+}
+body input,
+body textarea {
+  background-color: var(--text-color);
+}
+body button {
+  text-align: center;
+}
+body a,
+body .link-btn {
   background-color: transparent;
-  color: skyblue;
+  color: var(--accent-color);
   text-decoration: underline;
   padding: 0;
 }
-a:hover,
-.link-btn:hover {
-  color: #fff;
+body a:hover,
+body .link-btn:hover {
+  color: var(--text-color);
   cursor: pointer;
+}
+body .standard-btn {
+  height: 35px;
+  min-width: 90px;
+  font-weight: bold;
+}
+body summary.standard-btn {
+  width: 150px;
+  color: var(--bg-color);
+  margin: auto;
+}
+body .standard-btn,
+body nav li {
+  background-color: var(--accent-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+body .standard-btn:hover,
+body nav li:hover {
+  background-color: var(--text-color);
+  color: var(--accent-color);
+  cursor: pointer;
+}
+body textarea {
+  height: 80px;
+  width: 300px;
 }
 
 #alternative-page {
   max-width: 800px;
   width: 100%;
   box-sizing: border-box;
-  color: #eee;
+  color: var(--text-color);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -55,245 +110,14 @@ a:hover,
   width: 110px;
 }
 
-body {
-  background-color: #222;
-  margin: 0;
-}
-body,
-body button,
-body input,
-body select,
-body textarea {
-  color: #111;
-  font-family: "PT Sans Narrow", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-weight: normal;
-  line-height: 1.4rem;
-}
-body button,
-body input,
-body textarea {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border: 0;
-  border-radius: 0;
-}
-body input,
-body textarea {
-  background-color: #eee;
-}
-body button {
-  text-align: center;
+h1,
+h2 {
+  color: var(--accent-color);
+  font-family: "Norse Bold", "Times New Roman", Times, serif;
 }
 
-.compare {
-  max-width: 320px;
-  min-width: 160px;
-  width: 100%;
-  box-sizing: border-box;
-  display: inline-flex;
-  flex-direction: column;
-  gap: 15px;
-  padding: 10px;
-}
-.compare h3 {
-  margin: 0;
-}
-.compare td {
-  background-color: #444;
-  padding: 2px 5px;
-}
-.compare td.unlike-row {
-  background-color: #333;
-  font-size: 0.85rem;
-  font-style: italic;
-  font-weight: 100;
-}
-
-img.separator {
-  height: auto;
-  width: 150px;
-  margin: auto;
-  padding: 40px 0;
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-}
-
-#sign-in {
-  height: 100%;
-  width: 100%;
-  color: #eee;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
-#sign-in form table {
-  margin: auto;
-}
-#sign-in form table tr td:first-child {
-  text-align: right;
-}
-#sign-in #sign-in-error {
-  color: red;
-}
-
-summary.standard-btn {
-  width: 150px;
-  color: #111;
-  margin: auto;
-}
-
-.standard-btn {
-  height: 35px;
-  min-width: 90px;
-  font-weight: bold;
-}
-
-.standard-btn,
-nav li {
-  background-color: #999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-.standard-btn:hover,
-nav li:hover {
-  background-color: #111;
-  color: #eee;
-  cursor: pointer;
-}
-
-#user-options {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-}
-
-header nav {
-  height: 35px;
-}
-header nav ul {
-  height: 100%;
-  display: flex;
-  list-style-type: none;
-  gap: 5px;
-  margin: 0;
-  padding: 0;
-}
-header nav ul li {
-  flex: 1;
-  font-size: 15px;
-  font-weight: bold;
-  line-height: 1rem;
-}
-header nav ul li.highlighted {
-  background-color: transparent;
-  color: #eee;
-}
-
-main {
-  display: flex;
-  flex: 1;
-  overflow-x: scroll;
-  scroll-snap-type: x mandatory;
-}
-main .slide {
-  height: 100%;
-  min-width: 100vw;
-  box-sizing: border-box;
-  color: #eee;
-  overflow-y: auto;
-  padding: 60px 10px;
-  scroll-snap-align: start;
-}
-main .slide#home #custom {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 10px;
-}
-main .slide#home #questions {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-main .slide#home #questions,
-main .slide#home #questions button {
-  width: 100%;
-}
-main .slide#home #questions h2 {
-  margin-top: 0;
-}
-main .slide#home #questions button {
-  background-color: rgba(100, 100, 100, 0.2);
-  box-sizing: border-box;
-  color: #eee;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-size: inherit;
-  font-style: italic;
-  padding: 10px;
-}
-main .slide#home #questions button:hover {
-  background-color: #111;
-  color: #eee;
-  cursor: pointer;
-}
-main .slide#home #questions button h3 {
-  font-style: initial;
-  margin: 0 0 5px;
-  text-decoration: underline;
-}
-main .slide#home .payment-input-wrapper {
-  border-bottom: 2px solid #333;
-  margin-bottom: 12.5px;
-}
-main .slide#home .payment-input-wrapper:first-child input {
-  height: 19.2px;
-  padding: 0;
-}
-main .slide#home .payment-input-wrapper:first-child input:focus {
-  outline: none;
-}
-main .slide#home .payment-input-wrapper input {
-  width: 100%;
-  color: #eee;
-  background-color: transparent;
-  font-size: 16px;
-  font-family: "Courier New";
-  text-align: center;
-}
-main .slide#home .payment-input-wrapper input::-moz-placeholder {
-  color: #888;
-}
-main .slide#home .payment-input-wrapper input::placeholder {
-  color: #888;
-}
-main .slide .slide-container {
-  max-width: 800px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 20px;
-  margin: auto;
-}
-main .slide .slide-container > * {
-  margin: 0;
-  text-align: center;
-}
-main .slide .slide-container > *:is(h1) {
-  margin-bottom: 25px;
+h1 {
+  font-size: 3rem;
 }
 
 #card-images {
@@ -304,7 +128,7 @@ main .slide .slide-container > *:is(h1) {
 }
 #card-images .card-info {
   width: 120px;
-  background-color: #444;
+  background-color: var(--box-bg-color);
   font-size: 14px;
   line-height: 18px;
   padding: 5px;
@@ -322,13 +146,55 @@ main .slide .slide-container > *:is(h1) {
   transform: rotate(180deg);
 }
 
+img.separator {
+  height: auto;
+  width: 150px;
+  margin: auto;
+  padding: 40px 0;
+}
+
 details[open] summary {
   display: none;
 }
 
-textarea {
-  height: 80px;
-  width: 300px;
+.compare {
+  max-width: 320px;
+  min-width: 160px;
+  width: 100%;
+  box-sizing: border-box;
+  display: inline-flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 10px;
+}
+.compare h3 {
+  margin: 0;
+}
+.compare td {
+  background-color: var(--box-bg-color);
+  padding: 2px 5px;
+}
+.compare td:first-child {
+  font-weight: 600;
+}
+.compare td.unlike-row {
+  background-color: rgba(250, 250, 250, 0.6);
+  color: var(--bg-color);
+  font-size: 0.85rem;
+  font-weight: 600;
+}
+
+.subscribe-form {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+}
+
+#user-options {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
 }
 
 ul.words-list {
@@ -340,7 +206,9 @@ ul.words-list {
   padding: 0;
 }
 ul.words-list li {
-  border: 1px solid #444;
+  background-color: var(--box-bg-color);
+  border: 1px solid var(--accent-color);
   border-radius: 8px;
+  font-weight: 600;
   padding: 5px 10px;
 }/*# sourceMappingURL=style.css.map */
