--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -72,7 +72,9 @@ body {
     .standard-btn {
         height: 35px;
         min-width: 90px;
+        box-sizing: border-box;
         font-weight: bold;
+        padding: 0 12px;
     }
 
     summary.standard-btn {
@@ -119,6 +121,10 @@ body {
 
         h1 {
             margin: 0;
+        }
+
+        h2 {
+            margin-bottom: 0;
         }
 
         button {
