--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,10 @@ html,
 
 body {
   background-color: var(--bg-color);
+  background-image: url("./assets/pythia-bg2.png"), url("./assets/pythia-bg.png");
+  background-position: center left 6vw, center right 6vw;
+  background-repeat: no-repeat;
+  background-size: auto clamp(400px, 60vh, 800px);
   margin: 0;
 }
 body #root {
@@ -115,6 +119,12 @@ body textarea {
   width: 110px;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-position: center left, center right;
+    background-size: auto clamp(350px, 50vh, 500px);
+  }
+}
 h1,
 h2 {
   color: var(--accent-color);
