--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,6 +18,11 @@ html,
 
 body {
     background-color: var(--bg-color);
+    background-image: url("./assets/pythia-bg2.png"),
+        url("./assets/pythia-bg.png");
+    background-position: center left 6vw, center right 6vw;
+    background-repeat: no-repeat;
+    background-size: auto clamp(400px, 60vh, 800px);
     margin: 0;
 
     #root {
@@ -130,6 +135,13 @@ body {
         button {
             width: 110px;
         }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-position: center left, center right;
+        background-size: auto clamp(350px, 50vh, 500px);
     }
 }
 
