adjust font import

--- a/src/css/custom-spread.css
+++ b/src/css/custom-spread.css
@@ -45,7 +45,7 @@
 }
 #custom-spread label input[type=checkbox]:checked::before {
   content: "✓";
-  font-weight: bold;
+  font-weight: 700;
   font-size: 15px;
 }
 #custom-spread select {
