--- a/src/css/custom-spread.scss
+++ b/src/css/custom-spread.scss
@@ -51,7 +51,7 @@
 
                 &::before {
                     content: "✓";
-                    font-weight: bold;
+                    font-weight: 700;
                     font-size: 15px;
                 }
             }
