--- a/src/css/spread.css
+++ b/src/css/spread.css
@@ -12,7 +12,7 @@ header nav ul {
 header nav ul li {
   flex: 1;
   font-size: 15px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 1rem;
 }
 header nav ul li.highlighted {
@@ -34,6 +34,9 @@ main .slide {
   overflow-y: auto;
   padding: 60px 10px;
   scroll-snap-align: start;
+}
+main .slide#home.unverified {
+  display: flex;
 }
 main .slide#home #custom {
   display: flex;
