--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap");
 @import url("./colors.css");
 @font-face {
   font-family: "Norse Bold";
   src: url("./fonts/Norsebold.otf") format("opentype");
-  font-weight: bold;
+  font-weight: 700;
   font-style: normal;
 }
 body,
@@ -51,6 +51,9 @@ body textarea {
 body button {
   text-align: center;
 }
+body a[href^="mailto:"] {
+  text-decoration: none;
+}
 body a,
 body .link-btn {
   background-color: transparent;
@@ -67,11 +70,11 @@ body .standard-btn {
   height: 35px;
   min-width: 90px;
   box-sizing: border-box;
-  font-weight: bold;
+  font-weight: 700;
   padding: 0 12px;
 }
 body summary.standard-btn {
-  width: 150px;
+  width: 180px;
   color: var(--bg-color);
   margin: auto;
 }
@@ -116,7 +119,7 @@ body textarea {
   margin-bottom: 0;
 }
 #alternative-page.settings button {
-  width: 110px;
+  width: 150px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -149,7 +152,7 @@ h1 {
   padding: 5px;
 }
 #card-images .card-info .card-name {
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .card-image {
@@ -171,6 +174,12 @@ img.separator {
 details[open] summary {
   display: none;
 }
+details > summary {
+  list-style: none;
+}
+details > summary::-webkit-details-marker {
+  display: none;
+}
 
 .compare {
   max-width: 320px;
@@ -190,13 +199,13 @@ details[open] summary {
   padding: 2px 5px;
 }
 .compare td:first-child {
-  font-weight: 600;
+  font-weight: 700;
 }
 .compare td.unlike-row {
   background-color: rgba(250, 250, 250, 0.6);
   color: var(--bg-color);
   font-size: 0.85rem;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .subscribe-form {
@@ -224,6 +233,6 @@ ul.words-list li {
   background-color: var(--box-bg-color);
   border: 1px solid var(--accent-color);
   border-radius: 8px;
-  font-weight: 600;
+  font-weight: 700;
   padding: 5px 10px;
 }/*# sourceMappingURL=style.css.map */
