--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap");
 @import url("./colors.css");
 
 @font-face {
     font-family: "Norse Bold";
     src: url("./fonts/Norsebold.otf") format("opentype");
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
 }
 
@@ -61,6 +61,10 @@ body {
         text-align: center;
     }
 
+    a[href^="mailto:"] {
+        text-decoration: none;
+    }
+
     a,
     .link-btn {
         background-color: transparent;
@@ -78,12 +82,12 @@ body {
         height: 35px;
         min-width: 90px;
         box-sizing: border-box;
-        font-weight: bold;
+        font-weight: 700;
         padding: 0 12px;
     }
 
     summary.standard-btn {
-        width: 150px;
+        width: 180px;
         color: var(--bg-color);
         margin: auto;
     }
@@ -133,7 +137,7 @@ body {
         }
 
         button {
-            width: 110px;
+            width: 150px;
         }
     }
 }
@@ -173,7 +177,7 @@ h1 {
         padding: 5px;
 
         .card-name {
-            font-weight: bold;
+            font-weight: 700;
         }
     }
 }
@@ -203,6 +207,14 @@ details {
             display: none;
         }
     }
+
+    & > summary {
+        list-style: none;
+
+        &::-webkit-details-marker {
+            display: none;
+        }
+    }
 }
 
 .compare {
@@ -224,14 +236,14 @@ details {
         padding: 2px 5px;
 
         &:first-child {
-            font-weight: 600;
+            font-weight: 700;
         }
 
         &.unlike-row {
             background-color: rgba(250, 250, 250, 0.6);
             color: var(--bg-color);
             font-size: 0.85rem;
-            font-weight: 600;
+            font-weight: 700;
         }
     }
 }
@@ -260,7 +272,7 @@ ul.words-list {
         background-color: var(--box-bg-color);
         border: 1px solid var(--accent-color);
         border-radius: 8px;
-        font-weight: 600;
+        font-weight: 700;
         padding: 5px 10px;
     }
 }
