--- a/src/css/sign-in.scss
+++ b/src/css/sign-in.scss
@@ -1,13 +1,15 @@
 @import url("./colors.css");
 
 #sign-in {
-    height: 100%;
     width: 100%;
+    box-sizing: border-box;
     color: var(--text-color);
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1;
     flex-direction: column;
+    padding: 60px 10px;
     text-align: center;
 
     form {
