--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -3,4 +3,5 @@
     --box-bg-color: rgba(250, 250, 250, 0.25);
     --text-color: #f6ecdb;
     --accent-color: #cf9a4a;
+    --accent-color-2: #96afb3;
 }
