--- a/src/css/sign-in.css
+++ b/src/css/sign-in.css
@@ -1,12 +1,14 @@
 @import url("./colors.css");
 #sign-in {
-  height: 100%;
   width: 100%;
+  box-sizing: border-box;
   color: var(--text-color);
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1;
   flex-direction: column;
+  padding: 60px 10px;
   text-align: center;
 }
 #sign-in form table {
