--- a/src/css/spread.css
+++ b/src/css/spread.css
@@ -23,7 +23,8 @@ header nav ul li.highlighted {
 main {
   display: flex;
   flex: 1;
-  overflow-x: scroll;
+  overflow: scroll;
+  overflow-x: hidden;
   scroll-snap-type: x mandatory;
 }
 main .slide {
@@ -73,10 +74,12 @@ main .slide#home #questions button:hover {
   color: var(--text-color);
   cursor: pointer;
 }
+main .slide#home #questions button:hover h3 {
+  color: var(--accent-color-2);
+}
 main .slide#home #questions button h3 {
   font-style: initial;
   margin: 0 0 5px;
-  text-decoration: underline;
 }
 main .slide#home .payment-input-wrapper {
   border-bottom: 2px solid #333;
@@ -112,12 +115,9 @@ main .slide .slide-container {
   gap: 20px;
   margin: auto;
 }
-main .slide .slide-container > * {
+main .slide .slide-container > *:not(h1) {
   margin: 0;
   text-align: center;
-}
-main .slide .slide-container > *:is(h1) {
-  margin-bottom: 25px;
 }
 main .slide .slide-container h2.bigger-header {
   font-size: 2.4rem;
