--- a/src/css/spread.scss
+++ b/src/css/spread.scss
@@ -28,7 +28,8 @@ header {
 main {
     display: flex;
     flex: 1;
-    overflow-x: scroll;
+    overflow: scroll;
+    overflow-x: hidden;
     scroll-snap-type: x mandatory;
 
     .slide {
@@ -82,12 +83,15 @@ main {
                         background-color: #111;
                         color: var(--text-color);
                         cursor: pointer;
+
+                        h3 {
+                            color: var(--accent-color-2);
+                        }
                     }
 
                     h3 {
                         font-style: initial;
                         margin: 0 0 5px;
-                        text-decoration: underline;
                     }
                 }
             }
@@ -131,13 +135,9 @@ main {
             gap: 20px;
             margin: auto;
 
-            & > * {
+            & > *:not(h1) {
                 margin: 0;
                 text-align: center;
-
-                &:is(h1) {
-                    margin-bottom: 25px;
-                }
             }
 
             h2.bigger-header {
