--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -73,7 +73,7 @@ body {
         padding: 0;
 
         &:hover {
-            color: var(--text-color);
+            color: var(--accent-color-2);
             cursor: pointer;
         }
     }
@@ -101,8 +101,7 @@ body {
         text-align: center;
 
         &:hover {
-            background-color: var(--text-color);
-            color: var(--accent-color);
+            background-color: var(--accent-color-2);
             cursor: pointer;
         }
     }
@@ -121,16 +120,13 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: auto;
-    padding: 40px 15px;
+    margin: 0 auto;
+    padding: 60px 10px;
     text-align: center;
 
     &.settings {
         gap: 20px;
-
-        h1 {
-            margin: 0;
-        }
+        margin: auto;
 
         h2 {
             margin-bottom: 0;
@@ -153,12 +149,16 @@ body {
 
 h1,
 h2 {
-    color: var(--accent-color);
     font-family: "Norse Bold", "Times New Roman", Times, serif;
 }
 
 h1 {
+    color: var(--accent-color-2);
     font-size: 3rem;
+}
+
+h2 {
+    color: var(--accent-color);
 }
 
 // IMAGES
