--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,6 +17,7 @@ html,
 }
 
 body {
+    background-attachment: fixed;
     background-color: var(--bg-color);
     background-image: url("./assets/pythia-bg2.png"),
         url("./assets/pythia-bg.png");
@@ -79,7 +80,7 @@ body {
     }
 
     .standard-btn {
-        height: 35px;
+        min-height: 35px;
         min-width: 90px;
         box-sizing: border-box;
         font-weight: 700;
@@ -113,27 +114,34 @@ body {
 }
 
 #alternative-page {
-    max-width: 800px;
+    height: 100%;
     width: 100%;
-    box-sizing: border-box;
-    color: var(--text-color);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin: 0 auto;
-    padding: 60px 10px;
-    text-align: center;
+    overflow: auto;
 
-    &.settings {
-        gap: 20px;
-        margin: auto;
+    .container {
+        max-width: 800px;
+        min-height: 100%;
+        box-sizing: border-box;
+        color: var(--text-color);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 0 auto;
+        padding: 60px 10px;
+        text-align: center;
 
-        h2 {
-            margin-bottom: 0;
-        }
+        &.settings {
+            gap: 20px;
+            margin: auto;
 
-        button {
-            width: 150px;
+            h2 {
+                margin-bottom: 0;
+            }
+
+            button {
+                width: 150px;
+            }
         }
     }
 }
