--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,7 +94,9 @@ body nav li:hover {
 }
 body textarea {
   height: 80px;
-  width: 300px;
+  max-width: 320px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #alternative-page {
@@ -140,6 +142,8 @@ h2 {
 h1 {
   color: var(--accent-color-2);
   font-size: 3rem;
+  line-height: 3rem;
+  text-align: center;
 }
 
 h2 {
@@ -179,6 +183,9 @@ img.separator {
   padding: 40px 0;
 }
 
+details {
+  width: 100%;
+}
 details[open] summary {
   display: none;
 }
@@ -217,9 +224,8 @@ details > summary::-webkit-details-marker {
 }
 
 .subscribe-form {
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 #user-options {
