--- a/src/css/spread.css
+++ b/src/css/spread.css
@@ -39,7 +39,14 @@ main .slide {
 main .slide#home.unverified {
   display: flex;
 }
-main .slide#home #custom {
+main .slide#home .description {
+  font-size: 1.1rem;
+  font-weight: bold;
+  max-width: 650px;
+}
+main .slide#home #custom-question {
+  max-width: 320px;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -55,7 +62,7 @@ main .slide#home #questions button {
   width: 100%;
 }
 main .slide#home #questions h2 {
-  margin-top: 0;
+  margin-top: 10px;
 }
 main .slide#home #questions button {
   background-color: rgba(100, 100, 100, 0.2);
