--- a/src/css/spread.scss
+++ b/src/css/spread.scss
@@ -46,7 +46,15 @@ main {
                 display: flex;
             }
 
-            #custom {
+            .description {
+                font-size: 1.1rem;
+                font-weight: bold;
+                max-width: 650px;
+            }
+
+            #custom-question {
+                max-width: 320px;
+                width: 100%;
                 display: flex;
                 align-items: center;
                 flex-direction: column;
@@ -64,7 +72,7 @@ main {
                 }
 
                 h2 {
-                    margin-top: 0;
+                    margin-top: 10px;
                 }
 
                 button {
